# slot_booking/views/book_slot/api_wrapper.py
@@ -1,29 +1,49 @@
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
+from slot_booking.interactors.book_a_slot_interactor \
+    import BookASlotInteractor
+
+from slot_booking.storages.washing_machine_slot_storage_implementation\
+    import WashingMachineSlotStorageImplementation
+
+from slot_booking.storages.user_slot_storage_implementation\
+    import UserSlotStorageImplementation
+
+from slot_booking.storages.configure_slot_storage_implementation \
+    import ConfigureSlotStorageImplementation
+
+from slot_booking.presenters.presenter_implementation import \
+    PresenterImplementation
+import json
+from django.http import HttpResponse
 
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
 
-    try:
-        from slot_booking.views.book_slot.tests.test_case_01 \
-            import TEST_CASE as test_case
-    except ImportError:
-        from slot_booking.views.book_slot.tests.test_case_01 \
-            import test_case
+    user_id = kwargs["user_dto"].user_id
+    request_data = kwargs['request_data']
+    date = request_data["date"]
+    start_time = request_data["start_time"]
+    end_time = request_data["end_time"]
+    
 
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        from slot_booking.views.book_slot.request_response_mocks \
-            import RESPONSE_200_JSON
-    except ImportError:
-        RESPONSE_200_JSON = ''
-    response_tuple = mock_response(
-        app_name="slot_booking", test_case=test_case,
-        operation_name="book_slot",
-        kwargs=kwargs, default_response_body=RESPONSE_200_JSON,
-        group_name="")
-    return response_tuple[1]
+    user_slot_storage = UserSlotStorageImplementation()
+    washing_machine_slot_storage = WashingMachineSlotStorageImplementation()
+    configure_slot_storage = ConfigureSlotStorageImplementation()
+    presenter = PresenterImplementation()
+    interactor = BookASlotInteractor(
+        washing_machine_slot_storage=washing_machine_slot_storage,
+        user_slot_storage=user_slot_storage,
+        configure_slot_storage=configure_slot_storage,
+        presenter=presenter
+    )
+
+    slot_response = interactor.book_a_slot(
+        user_id=user_id, date=date, start_time=start_time, end_time=end_time
+    )
+
+    data = json.dumps(slot_response)
+    response = HttpResponse(data, status=201)
+    return response
